--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
                 <p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
             </div><!-- /.blurb -->
         </div><!-- /.container -->
+        <div>
+           <video src="movie.ogg" controls="controls">
+                您的浏览器不支持 video 标签。
+           </video>
+        </div>
         <footer>
             <ul>
                 <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
