--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
            <video src="387736_2643849_l.mp3" controls="controls">
                 您的浏览器不支持 video 标签。
            </video>
+           <video src="https://video.xieyaokun.com/%E3%80%8A%E5%A4%A7%E9%B1%BC%E3%80%8B%E5%91%A8%E6%B7%B1-%E9%83%AD%E6%B2%81.mp4">
+            </video>
         </div>
         <footer>
             <ul>
