--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div><!-- /.container -->
         <div>
          
-           <video src="https://video.xieyaokun.com/%E3%80%8A%E5%A4%A7%E9%B1%BC%E3%80%8B%E5%91%A8%E6%B7%B1-%E9%83%AD%E6%B2%81.mp4">
+           <video src="https://video.xieyaokun.com/%E3%80%8A%E5%A4%A7%E9%B1%BC%E3%80%8B%E5%91%A8%E6%B7%B1-%E9%83%AD%E6%B2%81.mp4" controls="controls" autoplay="" muted="muted" >
             </video>
         </div>
         <footer>
